# Dapabot

./: .containerignore  .gitignore  AGENT_IMPLEMENTATION.md  AGENT_QUICKSTART.md  Containerfile  FINAL_REFACTORING.md  README.md  REFACTORING_NOTES.md  REFACTORING_REPLICATE.md  agent.db  config.db-shm  config.db-wal  dapabot.py  packages.txt  pyproject.toml  test_mcp_discovery.py
.github/workflows/: pubblica-container.yml
docs/: CHANGELOG_MCP_USE.md  MCP_Discovery_Example.md  MCP_Discovery_GUI.md  MCP_Integration_Manual.md  MCP_USE_INTEGRATION.md  Manuale_Utente_DAPABot.md  README.md  README_MCP_USE.md  README_TEST_SERVER.md  TEST_MCP_SERVER.md  Tools_System_Manual.md
src/: Allegato.py  Configurazione.py  ConfigurazioneDB.py  DBAgent.py  HuggingfaceProvider.py  Messaggio.py  OpenRouterProvider.py  Provider.py  Rag.py  SessionManager.py  StoricoChat.py  gui_utils.py
src/mcp/: __init__.py  client.py  gui_mcp.py  gui_mcp_discovery.py  langchain_adapter.py
src/models/: __init__.py  allegato.py  base.py  chat.py  configurazione_rag.py  mcp_server.py  messaggio.py  messaggio_in_chat.py  modello.py  provider.py  tool.py
src/providers/: StoricoChat.py  base.py  cortecs.py  huggingface.py  loader.py  openrouter.py  rag.py  replicate.py  venice.py
src/tools/: Arxiv.py  DuckDuckGo.py  Filesystem.py  Github.py  Gitlab.py  Jira.py  SqlDatabase.py  Tool.py  Wikipedia.py  gui_tools.py  loader.py
