[project]
name = "dapabot"
version = "0.1.0"
description = "Chatbot avanzato multimodello, multiprovider e multimodale"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Ivan Ballatore"}
]
maintainers = [
    {name = "Ivan Ballatore"}
]
keywords = ["chatbot", "llm", "langchain", "streamlit", "rag", "mcp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "docling>=2.63.0",
    "duckduckgo-search>=8.1.1",
    "extra-streamlit-components>=0.1.81",
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.3",
    "mcp-use>=0.1.0",
    "peewee>=3.17.8",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "rapidocr-onnxruntime>=1.4.4",
    "replicate>=1.0.7",
    "sentence-transformers>=5.1.2",
    "sqlite-web>=0.6.8",
    "streamlit>=1.51.0",
    "uv>=0.10.2",
    "validators>=0.35.0",
    "fastmcp>=3.0.0",
]
